fixed xprincipia projects alignment problem, first time it apparently didn't work

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -1022,7 +1022,7 @@
       }
     #exploreInput {
     	color: #dddddd;
-    	background-color: #0f131c;
+    	background-color: inherit;
     	border: 1px solid #dddddd;
     	height: 35px;
     	width: 80%;
@@ -1922,7 +1922,7 @@
     #welcomeProblemsUnitList {
       text-align: center;
       display: flex;
-      align-items: center;
+      /*align-items: center;*/
       justify-content: center;
       width: 100%;
       margin: 0 auto;
